Enhance DriverServiceImpl with improved driver assignment and rating logic; add unit tests for DriverManager functionality